--- a/public/about.html
+++ b/public/about.html
@@ -39,8 +39,8 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">About Me</a></li>
-            <li><a href="about.html">Resume</a></li>
+            <li><a href="index.html">About Me</a></li>
+            <li class="active"><a href="about.html">Resume</a></li>
             <li><a href="works.html" class="smoothscroll">Coursework</a></li>
             <li><a href="contact.html" class="smoothscroll">Contact</a></li>
           </ul>
@@ -49,14 +49,10 @@
       </div>
     </div>
 
-    <div id="headerwrap">
+    <div id="aboutwrap">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 col-lg-offset-3">
-            <h4>HELLO FRIENDS, MY NAME IS</h4>
-            <h1>NATHAN LAVIN</h1>
-            <h4>WEB DESIGNER, GAMMER & MUSICIAN</h4>
-          </div>
+          <div class="col-lg-6 col-lg-offset-3"></div>
         </div>
       </div>
       <!-- /container -->
@@ -64,25 +60,9 @@
 
     <div class="container">
       <div class="row centered mt mb">
-        <h1>My Portfolio</h1>
-
-        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio01.png" alt="" class="img-responsive" /></a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio02.png" alt="" class="img-responsive" /></a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio03.png" alt="" class="img-responsive" /></a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio04.png" alt="" class="img-responsive" /></a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio05.png" alt="" class="img-responsive" /></a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio06.png" alt="" class="img-responsive" /></a>
+        <div class="col-lg-8 col-lg-offset-2">
+          <h2>Nathan Lavin</h2>
+          <p>(PUT RESUME HERE)</p>
         </div>
       </div>
     </div>
@@ -124,6 +104,7 @@
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="lib/php-mail-form/validate.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
 
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
