--- a/public/works.html
+++ b/public/works.html
@@ -39,9 +39,9 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">About Me</a></li>
+            <li><a href="index.html">About Me</a></li>
             <li><a href="about.html">Resume</a></li>
-            <li><a href="works.html" class="smoothscroll">Coursework</a></li>
+            <li class="active"><a href="works.html" class="smoothscroll">Coursework</a></li>
             <li><a href="contact.html" class="smoothscroll">Contact</a></li>
           </ul>
         </div>
@@ -49,13 +49,13 @@
       </div>
     </div>
 
-    <div id="headerwrap">
+    <div id="workwrap">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-lg-offset-3">
-            <h4>HELLO FRIENDS, MY NAME IS</h4>
-            <h1>NATHAN LAVIN</h1>
-            <h4>WEB DESIGNER, GAMMER & MUSICIAN</h4>
+            <h4>PROJECTS</h4>
+            <h1>WORK I HAVE DONE</h1>
+            <h4>PROJECTS</h4>
           </div>
         </div>
       </div>
@@ -64,25 +64,14 @@
 
     <div class="container">
       <div class="row centered mt mb">
-        <h1>My Portfolio</h1>
-
-        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio01.png" alt="" class="img-responsive" /></a>
+        <div class="col-lg-8 col-lg-offset-2">
+          <h4>ABOUT THE PROJECT</h4>
+          <p>(DO THIS LATER WHEN PROJECTS HAVE STARTED)</p>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio02.png" alt="" class="img-responsive" /></a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio03.png" alt="" class="img-responsive" /></a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio04.png" alt="" class="img-responsive" /></a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio05.png" alt="" class="img-responsive" /></a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio06.png" alt="" class="img-responsive" /></a>
+        <div class="col-lg-10 col-lg-offset-1 mt">
+          <img class="img-responsive" alt="" src="img/pr01.jpg" />
+          <br />
+          <img class="img-responsive" alt="" src="img/pr02.jpg" />
         </div>
       </div>
     </div>
@@ -124,6 +113,7 @@
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="lib/php-mail-form/validate.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
 
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
