--- a/public/about.html
+++ b/public/about.html
@@ -61,8 +61,15 @@
     <div class="container">
       <div class="row centered mt mb">
         <div class="col-lg-8 col-lg-offset-2">
-          <h2>Nathan Lavin</h2>
-          <p>(PUT RESUME HERE)</p>
+          <h2>Resume</h2>
+          <p>
+            Nathan Patrick Lavin<br />
+            7278 Country Club Dr<br />
+            Saint Louis, MO 63121<br />
+            314-502-1359<br />
+            nathan_lavin@insideranken.org<br />
+          </p>
+          <img src="./img/nathan_resume.png" alt="">
         </div>
       </div>
     </div>
