--- a/public/index.html
+++ b/public/index.html
@@ -64,25 +64,31 @@
 
     <div class="container">
       <div class="row centered mt mb">
-        <h1>My Portfolio</h1>
+        <h1>About Me</h1>
 
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio01.png" alt="" class="img-responsive" /></a>
+          <a href="works.html"><img src="img/portfolio/" alt="" class="img-responsive" /></a>
+          <p>place about stuff here and img</p>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio02.png" alt="" class="img-responsive" /></a>
+          <a href="works.html"><img src="img/portfolio/" alt="" class="img-responsive" /></a>
+          <p>place about stuff here and img</p>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio03.png" alt="" class="img-responsive" /></a>
+          <a href="works.html"><img src="img/portfolio/" alt="" class="img-responsive" /></a>
+          <p>place about stuff here and img</p>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio04.png" alt="" class="img-responsive" /></a>
+          <a href="works.html"><img src="img/portfolio/" alt="" class="img-responsive" /></a>
+          <p>place about stuff here and img</p>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio05.png" alt="" class="img-responsive" /></a>
+          <a href="works.html"><img src="img/portfolio/" alt="" class="img-responsive" /></a>
+          <p>place about stuff here and img</p>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <a href="works.html"><img src="img/portfolio/folio06.png" alt="" class="img-responsive" /></a>
+          <a href="works.html"><img src="img/portfolio/" alt="" class="img-responsive" /></a>
+          <p>place about stuff here and img</p>
         </div>
       </div>
     </div>
